added the backup of the database (workspace xml is probably just the preset to always add externally added file to the git)